--- a/pom.xml
+++ b/pom.xml
@@ -3,25 +3,76 @@
   <groupId>com.science.local</groupId>
   <artifactId>logger</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
+  <properties>
+                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                <!-- aspect4log can work with java 1.6 and above -->
+                <maven.compiler.source>1.6</maven.compiler.source>
+                <maven.compiler.target>1.6</maven.compiler.target>
+                <!-- the logging is done via slf4j -->
+                <slf4j.version>1.7.10</slf4j.version>
+                <spring.version>4.1.5.RELEASE</spring.version>
+                <aspectj.version>1.8.5</aspectj.version>
+        </properties>
+
+        <dependencyManagement>
+                <dependencies>
+                        <dependency>
+                                <groupId>org.springframework</groupId>
+                                <artifactId>spring-framework-bom</artifactId>
+                                <version>${spring.version}</version>
+                                <type>pom</type>
+                                <scope>import</scope>
+                                <exclusions>
+                                        <exclusion>
+                                                <artifactId>commons-logging</artifactId>
+                                                <groupId>commons-logging</groupId>
+                                        </exclusion>
+                                </exclusions>
+                        </dependency>
+                </dependencies>
+        </dependencyManagement>
+
+        <dependencies>
                 <dependency>
-                        <!--we will use logback as logger implementation, it is also possible 
-                                to log4j and java logging -->
+                        <!--We need this because Spring still uses common-logging, jcl-over-slf4j will substitute calles to common-loggin. 
+                            Make sure you excluded common-logging in every module that  depends on it. 
+                            For more details read http://docs.spring.io/spring/docs/4.1.x/spring-framework-reference/htmlsingle/#overview-logging-slf4j -->
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>jcl-over-slf4j</artifactId>
+                        <version>${slf4j.version}</version>
+                </dependency>
+                <dependency>
+                        <!--we will use logback as logger implementation, it is also possible to log4j and java logging -->
                         <groupId>ch.qos.logback</groupId>
                         <artifactId>logback-classic</artifactId>
                         <version>1.1.2</version>
+                </dependency>
+
+                <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-aop</artifactId>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-context</artifactId>
+                </dependency>
+                <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
                 </dependency>
                 <dependency>
                         <groupId>net.sf.aspect4log</groupId>
                         <artifactId>aspect4log</artifactId>
                         <version>1.0.7</version>
                 </dependency>
-                <!-- http://mvnrepository.com/artifact/junit/junit -->
+                   <!-- http://mvnrepository.com/artifact/junit/junit -->
 				<dependency>
 				    <groupId>junit</groupId>
 				    <artifactId>junit</artifactId>
 				    <version>4.8.1</version>
 				</dependency>
-                
         </dependencies>
+             
+        
 </project>
